# sphinxcontrib-nixdomain

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  sphinx.yml
docs/: conf.py  index.md  index.rst  manual-example.rst
docs/examples/: auto-library.md  auto-options.md  auto-packages.md  autodoc-example.rst  manual-example.rst  md-autodoc-example.md  rst-autodoc-example.rst
docs/reference/: auto-directives.md  changelog.md  configuration.md  manual.md  nix-library.md  roles.md  utility-directives.md
docs/tests/: manual.rst
docs/usage/: configuration.rst  cross-references.md  cross-references.rst  manual.rst  quick-start.md
examples/options/: autobar.nix  autofoo.nix  foo.nix  modules-list.nix
lib/: build-objects-json.nix  default.nix  library.nix  utils.nix
lib/options/: default.nix  filters.nix  modifiers.nix
src/sphinxcontrib_nixdomain/: __init__.py  _data.py  _domain.py  _library_autodoc.py  _module_autodoc.py  _package_autodoc.py  _utils.py  library.py  module.py  package.py
src/sphinxcontrib_nixdomain/templates/nixdomain/: package.md.jinja
templates/example/: flake.nix
templates/example/docs/: conf.py  index.md
templates/example/lib/: default.nix
templates/example/modules/: example.nix
templates/example/pkgs/: docs.nix
tests/: test_options.py  test_utils.py
tests/root/: automatic.md  conf.py  cross-references.md  index.rst  manual.rst  package.nix
